syntax = "proto3";
import "CDS.proto";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "DotCDS.Common";
package CooperativeDataService;

// a service for communication between different CDS stores

service CooperativeDataService {
	rpc IsOnline(CDS.TestRequest) returns (CDS.TestReply);
	rpc CreatePartialDatabase(CDS.CreateDatabaseRequest) returns (CDS.CreateDatabaseResult);
}